# open-godot-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PROTOCOL.md  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
docs/: AI_ASSISTANT.md  EXAMPLES.md
godot_plugin/addons/open_godot_mcp/: command_router.gd  plugin.cfg  plugin.gd  websocket_server.gd
test_project/: create_house.gd  create_house.gd.uid  game.tscn  house.tscn  kimi3d_final5.tscn  kimi3d_v8.tscn  player.gd  player.gd.uid  project.godot  robot_director.gd  robot_director.gd.uid  robot_idle.gd  robot_idle.gd.uid
test_project/addons/open_godot_mcp/: command_router.gd  command_router.gd.uid  event_monitor.gd  event_monitor.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid  websocket_server.gd.uid
